# streamlit-eda

./: README.md  pyproject.toml  requirements.txt
models/: model.pkl
notebooks/: prepare_data.ipynb
streamlit_eda/: app.py
