[tool.poetry]
name = "streamlit-eda"
version = "0.1.0"
description = ""
authors = ["Vyacheslav Kostrov <slavkostrov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
numpy = "^1.26.2"
ipykernel = "^6.27.1"
scikit-learn = "^1.3.2"
streamlit = "^1.29.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
